--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-    "name": "AdityaPlayer",
-    "logo": "https://te.legra.ph/file/2e2ddeb33674ba956148f.jpg",
+    "name": "EBD_WORLD-Player",
+    "logo": "https://te.legra.ph/file/dc26ba224897271279e81.jpg",
     "description": "An Advanced Premium Music Bot For Telegram Groups VC.",
     "keywords": ["music", "voice chat", "telegram"],
-    "repository": "https://github.com/itsadityaxd/adityaplayer",
+    "repository": "https://github.com/guzarji524/Adityaplayer",
     "stack": "container",
     "env": {
         "API_ID": {
